Улучшение логики классов